[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/TitleScreenMaze.gd" type="Script" id=1]
[ext_resource path="res://Scripts/TitleScreenSignalTrafficker.gd" type="Script" id=2]
[ext_resource path="res://Assets/Instances/Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Instances/Sun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Instances/MazeWalls.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Instances/Collect.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/MazeFont_100.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Fonts/Montsrerrat_24.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/Montsrerrat_16.tres" type="DynamicFont" id=10]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0, 0, 0, 1 )
sky_horizon_color = Color( 0.0431373, 0.156863, 0.25098, 1 )
sun_color = Color( 0.309804, 0, 0, 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 0.0901961, 0.0509804, 0.223529, 1 )
ambient_light_sky_contribution = 0.0
fog_color = Color( 0.501961, 0.6, 0.701961, 1 )
fog_sun_color = Color( 1, 0, 0, 1 )
fog_sun_amount = 1.0
fog_depth_curve = 0.406127
fog_transmit_enabled = true
ssao_quality = 2

[node name="3D title screen" type="Spatial"]
script = ExtResource( 1 )

[node name="RequestHandler" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Board" parent="." instance=ExtResource( 3 )]

[node name="Sun" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.991789, 0.0910228, 0.0898331, 0.127686, 0.744178, 0.655664, -0.00717145, 0.66175, -0.74969, 5.08078, 23.7508, -18.1864 )
light_energy = 1.0

[node name="GridMap" parent="." instance=ExtResource( 5 )]
data = {
"cells": PoolIntArray(  )
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 90, 0 )
far = 200.0

[node name="SpotLight" type="SpotLight" parent="Camera"]
light_energy = 4.0
spot_range = 106.617

[node name="Collect" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.853553, -0.146447, 0.5, 0.5, 0.5, -0.707107, -0.146447, 0.853553, 0.5, 0, 36, -2 )

[node name="TitleScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="TitleScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/CenterContainer"]
margin_left = 143.0
margin_top = 192.0
margin_right = 880.0
margin_bottom = 407.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_right = 737.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 7 )
text = "Procedural Maze"
uppercase = true

[node name="buttons" type="HBoxContainer" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 737.0
margin_bottom = 147.0

[node name="Start" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer/buttons"]
margin_right = 366.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
text = "START"
script = ExtResource( 9 )

[node name="Quit" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer/buttons"]
margin_left = 370.0
margin_right = 737.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 8 )
text = "QUIT"

[node name="Button" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer"]
visible = false
margin_top = 157.0
margin_right = 737.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 10 )
text = "Tutorial"

[node name="Demo" type="Button" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 157.0
margin_right = 737.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 10 )
text = "EXPERT MODE"

[node name="Maze_Status" type="Label" parent="TitleScreen/CenterContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 737.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 10 )
text = "Generating Maze..."

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )
[connection signal="button_up" from="TitleScreen/CenterContainer/VBoxContainer/buttons/Start" to="RequestHandler" method="_on_Start_button_up"]
[connection signal="button_up" from="TitleScreen/CenterContainer/VBoxContainer/buttons/Quit" to="RequestHandler" method="_on_Quit_button_up"]
[connection signal="button_up" from="TitleScreen/CenterContainer/VBoxContainer/Button" to="RequestHandler" method="_on_Button_button_up"]
[connection signal="button_up" from="TitleScreen/CenterContainer/VBoxContainer/Demo" to="RequestHandler" method="_on_Demo_button_up"]
